--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.galio.bussantiago">
 
+  <uses-permission android:name="android.permission.INTERNET"/>
+
   <application
     android:name=".BusSantiagoApp"
     android:allowBackup="true"
