--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,22 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            storeFile file('src/release/mykey.jks')
+            storePassword "********"
+            keyAlias "gelu"
+            keyPassword "********"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
+        sourceSets.debug.resources.srcDirs = ['src/debug/res']
+        sourceSets.release.resources.srcDirs = ['src/release/res']
     }
     androidExtensions {
         experimental = true
@@ -28,20 +39,24 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
 
     // Koin
     implementation 'org.koin:koin-android-viewmodel:2.0.1'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Maps & Location
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:2.19.0'
