--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,15 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
+
             signingConfig signingConfigs.release
         }
+
         sourceSets.debug.resources.srcDirs = ['src/debug/res']
         sourceSets.release.resources.srcDirs = ['src/release/res']
     }
