--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:2.19.0'
