--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,13 @@
   xmlns:tools="http://schemas.android.com/tools"
   package="org.galio.bussantiago">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
   <!--
    The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
    Google Maps Android API v2, but you must specify either coarse or fine
    location permissions for the 'MyLocation' functionality.
-   -->
+    -->
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
   <application
@@ -23,7 +22,6 @@
     android:theme="@style/AppTheme"
     android:usesCleartextTraffic="true"
     tools:targetApi="m">
-
     <!--
     The API key for Google Maps-based APIs is defined as a string resource.
     (See the file "res/values/google_maps_api.xml").
@@ -31,19 +29,29 @@
     You need a different API key for each encryption key, including the release key that is used to
     sign the APK for publishing.
     You can define the keys for the debug and release targets in src/debug/ and src/release/.
-    -->
+        -->
     <meta-data
       android:name="com.google.android.geo.API_KEY"
       android:value="@string/google_maps_api_key" />
 
     <activity android:name=".features.MainActivity">
       <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
 
+    <activity android:name=".widget.WidgetActivity"
+      android:label="@string/select_stop"/>
+
+    <receiver android:name=".widget.WidgetProvider">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+      </intent-filter>
+      <meta-data
+        android:name="android.appwidget.provider"
+        android:resource="@xml/app_widget_info" />
+    </receiver>
   </application>
 
 </manifest>
