--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,16 +42,29 @@
     </activity>
 
     <activity android:name=".widget.WidgetActivity"
-      android:label="@string/select_stop"/>
+      android:label="@string/select_stop">
+      <intent-filter>
+        <action android:name="android.apwidget.action.APPWIDGET_CONFIGURE" />
+      </intent-filter>
+    </activity>
 
-    <receiver android:name=".widget.WidgetProvider">
+    <receiver android:name=".widget.WidgetProvider"
+      android:label="@string/favorite_stop">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+      </intent-filter>
+      <intent-filter>
+        <action android:name="org.galio.bussantiago.REFRESH_WIDGET" />
       </intent-filter>
       <meta-data
         android:name="android.appwidget.provider"
         android:resource="@xml/app_widget_info" />
     </receiver>
+
+    <service
+      android:name="org.galio.bussantiago.widget.WidgetService"
+      android:permission="android.permission.BIND_REMOTEVIEWS" />
+
   </application>
 
 </manifest>
