--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // Mockito
-    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    // Mockito (final classes)
+    testImplementation 'org.mockito:mockito-inline:2.23.4'
 
     testImplementation 'junit:junit:4.13'
 
