--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: ./gradlew lint test
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
           path: app/build/reports
-          destination: reports
+          destination: app_reports
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: app/build/test-results
       - run:
@@ -33,7 +33,7 @@ jobs:
           command: ./gradlew core:test
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: core/build/reports
-          destination: reports
+          destination: core_reports
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: core/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
