--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,7 +10,15 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
 
     // Mockito
-    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    // Mockito (final classes)
+    testImplementation 'org.mockito:mockito-inline:2.23.4'
+
+    // MockWebServer
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
+
+    // Commons IO
+    testImplementation 'commons-io:commons-io:2.6'
 
     testImplementation 'junit:junit:4.13'
 }
