--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "org.galio.bussantiago"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 41
-        versionName "4.0.2"
+        versionCode 42
+        versionName "4.0.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "app_version", "v${defaultConfig.versionName}"
     }
@@ -109,6 +109,9 @@ dependencies {
     // Maps & Location
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    // Play Core (In-app reviews)
+    implementation 'com.google.android.play:core:1.9.0'
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:2.23.4'
