--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
       android:value="@string/google_maps_api_key" />
 
     <activity android:name=".features.MainActivity"
-      android:screenOrientation="portrait">
+      android:screenOrientation="portrait"
+      android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -45,14 +46,16 @@
 
     <activity android:name="widget.WidgetActivity"
       android:label="@string/select_stop"
-      android:screenOrientation="portrait">
+      android:screenOrientation="portrait"
+      android:exported="false">
       <intent-filter>
         <action android:name="android.apwidget.action.APPWIDGET_CONFIGURE" />
       </intent-filter>
     </activity>
 
     <receiver android:name="widget.WidgetProvider"
-      android:label="@string/favorite_stop">
+      android:label="@string/favorite_stop"
+      android:exported="false">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
       </intent-filter>
