--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,6 +137,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:1.1.1"
     implementation "com.google.android.material:compose-theme-adapter:1.1.1"
 
+    // Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+
     // Mockito
     testImplementation 'org.mockito:mockito-core:4.5.1'
     // Mockito (final classes)
