Added core unit tests to gradle task

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,6 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-task runUnitTests(dependsOn: [':app:testDebugUnitTest']) {
+task runUnitTests(dependsOn: [':app:testDebugUnitTest', ':core:test']) {
     description 'Run all unit tests'
 }
