--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
       android:name="com.google.android.geo.API_KEY"
       android:value="@string/google_maps_api_key" />
 
-    <activity android:name=".features.MainActivity"
+    <activity
+      android:name=".features.MainActivity"
       android:screenOrientation="portrait"
       android:exported="true">
       <intent-filter>
@@ -41,7 +42,8 @@
       </intent-filter>
     </activity>
 
-    <activity android:name="widget.WidgetActivity"
+    <activity
+      android:name="widget.WidgetActivity"
       android:label="@string/select_stop"
       android:screenOrientation="portrait"
       android:exported="false">
@@ -50,7 +52,8 @@
       </intent-filter>
     </activity>
 
-    <receiver android:name="widget.WidgetProvider"
+    <receiver
+      android:name="widget.WidgetProvider"
       android:label="@string/favorite_stop"
       android:exported="false">
       <intent-filter>
@@ -59,6 +62,7 @@
       <intent-filter>
         <action android:name="org.galio.bussantiago.REFRESH_WIDGET" />
       </intent-filter>
+
       <meta-data
         android:name="android.appwidget.provider"
         android:resource="@xml/widget_wprovider" />
