Update CircleCi config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,7 @@ workflows:
             - build_test
           filters:
             branches:
-              only: master
-
+              only: release
 
 jobs:
   build_test:
