--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 
 // First, we try to access to CircleCI environment variable,
 // if this is a local build, we obtain api key from a local file
@@ -28,10 +28,11 @@ def getApiKeyRelease() {
 
 android {
     defaultConfig {
-        compileSdk 31
         applicationId "org.galio.bussantiago"
+        namespace "org.galio.bussantiago"
+        compileSdk 34
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 51
         versionName "4.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -74,10 +75,6 @@ android {
         }
     }
 
-    androidExtensions {
-        experimental = true
-    }
-
     lintOptions {
         lintConfig file("$rootDir/app/lint-rules.xml")
         abortOnError true
@@ -86,47 +83,53 @@ android {
         htmlOutput file("$rootDir/app/lint-results.html")
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
     kotlinOptions {
-        jvmTarget = '1.8'
-        useIR = true
+        jvmTarget = '17'
     }
 
     buildFeatures {
-        compose true
+        compose = true
+        viewBinding = true
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.0-beta03'
+        kotlinCompilerExtensionVersion = "1.5.5"
     }
 }
 
 dependencies {
     implementation project(':core')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.12.0'
 
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // Navigation
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
 
     // Koin
     implementation 'io.insert-koin:koin-core:3.0.1'
     implementation 'io.insert-koin:koin-android:3.0.1'
 
     // Gson
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     // Maps & Location
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:19.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
 
     // Play Core (In-app reviews)
-    implementation 'com.google.android.play:core:1.9.0'
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.play:review-ktx:2.0.1'
 
     // Compose
     implementation "androidx.compose.runtime:runtime:1.1.1"
@@ -139,7 +142,7 @@ dependencies {
     implementation "com.google.android.material:compose-theme-adapter:1.1.1"
 
     // Coroutines
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0")
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:4.5.1'
