--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,9 @@ jobs:
       - image: cimg/android:2022.09
     environment:
       JVM_OPTS: -Xmx3200m
+      CIRCLE_JDK_VERSION: openjdk17
     steps:
       - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Install JDK 17
           command: |
@@ -28,7 +27,13 @@ jobs:
             sudo apt-get install -y openjdk-17-jdk
             sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-17-openjdk-amd64/bin/java 1
             sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
+            export JAVA_HOME="/usr/lib/jvm/java-17-openjdk-amd64"
             java -version
+      - run:
+          name: Set JAVA_HOME
+          command: echo 'export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64' >> $BASH_ENV
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
