--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
     <activity
       android:name=".features.MainActivity"
       android:screenOrientation="portrait"
-      android:exported="true">
+      android:exported="true"
+      tools:ignore="DiscouragedApi">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -46,7 +47,8 @@
       android:name="widget.WidgetActivity"
       android:label="@string/select_stop"
       android:screenOrientation="portrait"
-      android:exported="false">
+      android:exported="false"
+      tools:ignore="DiscouragedApi">
       <intent-filter>
         <action android:name="android.apwidget.action.APPWIDGET_CONFIGURE" />
       </intent-filter>
