--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         applicationId "org.galio.bussantiago"
         namespace "org.galio.bussantiago"
         compileSdk 34
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 34
         versionCode 53
         versionName "4.2.0"
@@ -84,12 +84,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '21'
     }
 
     buildFeatures {
@@ -143,6 +143,9 @@ dependencies {
 
     // Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0")
+
+    // Core Library Desugaring
+    implementation "com.android.tools:desugar_jdk_libs:2.0.4"
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:4.5.1'
