--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
@@ -22,6 +27,3 @@ dependencies {
 
     testImplementation 'junit:junit:4.13'
 }
-
-sourceCompatibility JavaVersion.VERSION_17
-targetCompatibility JavaVersion.VERSION_17
