--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,9 +15,13 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
 
     // Mockito
-    testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation 'org.mockito:mockito-core:5.0.0'
     // Mockito (final classes)
-    testImplementation 'org.mockito:mockito-inline:4.5.1'
+    testImplementation 'org.mockito:mockito-inline:5.0.0'
+
+    // Bytebuddy (necessary for Mockito inline)
+    implementation 'net.bytebuddy:byte-buddy:1.15.11'
+    testImplementation 'net.bytebuddy:byte-buddy-agent:1.1.15.11'
 
     // MockWebServer
     testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
