--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
 
+    // Koin
+    implementation 'io.insert-koin:koin-core:3.0.1'
+
     // Mockito
     testImplementation 'org.mockito:mockito-core:5.0.0'
     // Mockito (final classes)
