--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,13 +1,23 @@
-apply plugin: 'java-library'
-apply plugin: 'kotlin'
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+android {
+    defaultConfig {
+        namespace "org.galio.bussantiago.core"
+        compileSdk 34
+        minSdkVersion 26
+        targetSdkVersion 34
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
+    }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
@@ -16,6 +26,7 @@ dependencies {
 
     // Koin
     implementation 'io.insert-koin:koin-core:3.0.1'
+    implementation 'io.insert-koin:koin-android:3.0.1'
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:5.0.0'
