--- a/core/build.gradle
+++ b/core/build.gradle
@@ -44,5 +44,10 @@ dependencies {
     // Commons IO
     testImplementation 'commons-io:commons-io:2.6'
 
+    // ApplicationProvider.getApplicationContext()
+    implementation 'androidx.test:core-ktx:1.6.1'
+    // Roboelectric (necessary to provide a mock Android environment for the database)
+    testImplementation 'org.robolectric:robolectric:4.10.3'
+
     testImplementation 'junit:junit:4.13'
 }
