--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ android {
 }
 
 dependencies {
+    implementation project(':widget')
     implementation project(':core')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.7.0'
