Created shared module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,8 @@ android {
 dependencies {
     implementation project(':widget')
     implementation project(':core')
+    implementation project(':shared')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
