--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     defaultConfig {
-        namespace "org.galio.bussantiago.widget"
+        namespace "org.galio.bussantiago.shared"
         compileSdk 34
         minSdkVersion 26
         targetSdkVersion 34
@@ -20,16 +20,7 @@ android {
 }
 
 dependencies {
-    implementation project(':core')
-    implementation project(':shared')
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-
-    // Koin
-    implementation 'io.insert-koin:koin-core:3.0.1'
-    implementation 'io.insert-koin:koin-android:3.0.1'
-
-    testImplementation 'junit:junit:4.13.2'
 }
