--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -20,7 +20,11 @@ android {
 }
 
 dependencies {
+    implementation project(':core')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
+
+    testImplementation 'junit:junit:4.13.2'
 }
