--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,21 +42,8 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Run Tests (app)
+          name: Run Unit tests
           command: ./gradlew lint test
-      - store_artifacts:
-          path: app/build/reports
-          destination: app_reports
-      - store_test_results:
-          path: app/build/test-results
-      - run:
-          name: Run Tests (core)
-          command: ./gradlew core:test
-      - store_artifacts:
-          path: core/build/reports
-          destination: core_reports
-      - store_test_results:
-          path: core/build/test-results
 
   deploy:
     docker:
