--- a/widget/src/main/AndroidManifest.xml
+++ b/widget/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="org.galio.bussantiago.widget">
+  xmlns:tools="http://schemas.android.com/tools">
 
   <application>
 
@@ -18,7 +17,7 @@
 
     <receiver
       android:name="WidgetProvider"
-      android:label="@string/favorite_stop"
+      android:label="@string/widget_label"
       android:exported="false">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
