--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,8 @@ jobs:
       - store_artifacts:
           path: app/build/reports/tests/testDebugUnitTest/index.html
           destination: app_test_report
+      - store_test_results:
+          path: app/build/test-results/testDebugUnitTest
       - store_artifacts:
           path: core/build/reports/lint-results-debug.html
           destination: core_lint_report
