--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,29 +47,23 @@ jobs:
       - store_artifacts:
           path: app/build/reports/lint-results-debug.html
           destination: app_lint_report
-      - store_artifacts:
-          path: app/build/reports/tests/testDebugUnitTest/index.html
-          destination: app_test_report
       - store_test_results:
           path: app/build/test-results/testDebugUnitTest
       - store_artifacts:
           path: core/build/reports/lint-results-debug.html
           destination: core_lint_report
-      - store_artifacts:
-          path: core/build/reports/tests/testDebugUnitTest/index.html
-          destination: core_test_report
+      - store_test_results:
+          path: core/build/test-results/testDebugUnitTest
       - store_artifacts:
           path: shared/build/reports/lint-results-debug.html
           destination: shared_lint_report
-      - store_artifacts:
-          path: shared/build/reports/tests/testDebugUnitTest/index.html
-          destination: shared_test_report
+      - store_test_results:
+          path: shared/build/test-results/testDebugUnitTest
       - store_artifacts:
           path: widget/build/reports/lint-results-debug.html
           destination: widget_lint_report
-      - store_artifacts:
-          path: widget/build/reports/tests/testDebugUnitTest/index.html
-          destination: widget_test_report
+      - store_test_results:
+          path: widget/build/test-results/testDebugUnitTest
 
   deploy:
     docker:
