--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -31,5 +31,11 @@ dependencies {
     implementation 'io.insert-koin:koin-core:3.0.1'
     implementation 'io.insert-koin:koin-android:3.0.1'
 
+    /*// Mockito
+    testImplementation 'org.mockito:mockito-core:5.0.0'
+    testImplementation("org.mockito.kotlin:mockito-kotlin:5.0.0")
+    // Mockito (final classes)
+    testImplementation 'org.mockito:mockito-inline:5.0.0'*/
+
     testImplementation 'junit:junit:4.13.2'
 }
