--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -37,5 +37,10 @@ dependencies {
     // Mockito (final classes)
     testImplementation 'org.mockito:mockito-inline:5.0.0'*/
 
+    // ApplicationProvider.getApplicationContext()
+    implementation 'androidx.test:core-ktx:1.6.1'
+    // Roboelectric (necessary to provide a mock Android environment for the preferences)
+    testImplementation 'org.robolectric:robolectric:4.10.3'
+
     testImplementation 'junit:junit:4.13.2'
 }
