--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -7,6 +7,8 @@ android {
         compileSdk 34
         minSdkVersion 26
         targetSdkVersion 34
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     compileOptions {
@@ -26,5 +28,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
 
+    // ApplicationProvider.getApplicationContext()
+    implementation 'androidx.test:core-ktx:1.6.1'
+    implementation 'androidx.test.ext:junit-ktx:1.2.1'
+    // Roboelectric (necessary to provide a mock Android environment for the preferences)
+    testImplementation 'org.robolectric:robolectric:4.10.3'
+
     testImplementation 'junit:junit:4.13.2'
+
+    androidTestImplementation "androidx.test:runner:1.5.2"
 }
